Closed
Bug 854124
Opened 13 years ago
Closed 13 years ago
PageDown (JavaScript Markdown editor) behaves strangely
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: fischer.daniel94, Assigned: sstangl)
References
Details
(Keywords: regression, testcase)
Attachments
(1 file)
|
1.06 KB,
patch
|
dvander
:
review+
bajaj
:
approval-mozilla-aurora+
bajaj
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:22.0) Gecko/20130321 Firefox/22.0
Build ID: 20130321040204
Steps to reproduce:
- Go to http://stackoverflow.com/questions/ask
- Put in at least two lines of text
- Select the text
- Click the 'code' button (curly brackets)
Actual results:
Lines are indented by four spaces and the string 'visible' is put in front of the result.
Things get worse when you repeatedly click the 'code' button.
Other buttons also behave incorrectly.
This is also not a problem that happens on StackOverflow only - it happens with all installations of PageDown.
Expected results:
Lines should just be indented by four spaces.
This works correctly in Safari 6.0.3, Chrome 25.0.1364.172 and Firefox 19.0.2.
| Reporter | ||
Comment 1•13 years ago
|
||
Test page that doesn't require a login: http://pagedown.googlecode.com/hg/demo/browser/demo.html
Gives me 'p' instead of 'visible' though.
Comment 2•13 years ago
|
||
I can reproduce the problem on Aurora (21) but not in Beta (20).
Comment 3•13 years ago
|
||
Last good nightly: 2013-01-15
First bad nightly: 2013-01-16
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=56ff556e74d9&tochange=d8be4bc4fba8
Comment 4•13 years ago
|
||
The first bad revision is:
changeset: 118828:d13d8a663302
user: Sean Stangl <sstangl@mozilla.com>
date: Fri Jan 11 17:19:53 2013 -0800
summary: Bug 820124, Part 2/2 - Handle fast removal in str_replace(). r=dvan
der
Assignee: nobody → general
Blocks: 820124
Status: UNCONFIRMED → NEW
status-firefox20:
--- → unaffected
status-firefox21:
--- → affected
tracking-firefox22:
--- → ?
Component: General → JavaScript Engine
Ever confirmed: true
Keywords: regressionwindow-wanted
Updated•13 years ago
|
tracking-firefox21:
--- → ?
Comment 5•13 years ago
|
||
Tracking and passing this on to Sean as this could be a regression from Bug 820124 per comment# 4. Please reassign if needed
Assignee: general → sstangl
Updated•13 years ago
|
| Assignee | ||
Comment 6•13 years ago
|
||
(In reply to bhavana bajaj [:bajaj] from comment #5)
> Tracking and passing this on to Sean as this could be a regression from Bug
> 820124 per comment# 4. Please reassign if needed
Please set needinfo? instead of assigning me to the bug (or do both). I do not get notification of assignation, but needinfo? is easily recognizable in my inbox, and changes state in Bugzilla's "My Requests" panel.
I did not notice that I was assigned to this bug until just now, when bz pointed it out.
| Assignee | ||
Comment 7•13 years ago
|
||
(In reply to fischer.daniel94 from comment #1)
> Test page that doesn't require a login:
> http://pagedown.googlecode.com/hg/demo/browser/demo.html
Thanks for the standalone version. I've managed to reduce the issue to the following testcase, which passes on release but fails on nightly:
"p".match(/(p)/);
"x\ny\n".replace(/(^\n*)/, "");
assertEq(RegExp.$1, "");
Fix soon.
| Assignee | ||
Comment 8•13 years ago
|
||
Will also include testcase from previous comment.
Attachment #731363 -
Flags: review?(dvander)
Updated•13 years ago
|
Attachment #731363 -
Flags: review?(dvander) → review+
| Assignee | ||
Comment 9•13 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/a791e64589fb
Should be hoisted to 21 and 22.
Comment 10•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
Comment 11•13 years ago
|
||
(In reply to Sean Stangl [:sstangl] from comment #9)
> https://hg.mozilla.org/integration/mozilla-inbound/rev/a791e64589fb
>
> Should be hoisted to 21 and 22.
Looks like this is fixed on trunk, please request approval nomination for aurora,beta to get this uplifted.
| Assignee | ||
Comment 12•13 years ago
|
||
Comment on attachment 731363 [details] [diff] [review]
Update RegExpStatics on empty match in str_replace_regexp_remove().
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 820124
User impact if declined: The RegExp global may not be updated after a call to replace(). This affects websites such as the PageDown editor mentioned in Comment 0.
Testing completed (on m-c, etc.): m-c
Risk to taking this patch (and alternatives if risky): None
String or IDL/UUID changes made by this patch: None
Attachment #731363 -
Flags: approval-mozilla-beta?
Attachment #731363 -
Flags: approval-mozilla-aurora?
Comment 13•13 years ago
|
||
(In reply to fischer.daniel94 from comment #0)
> User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:22.0)
> Gecko/20130321 Firefox/22.0
> Build ID: 20130321040204
>
> Steps to reproduce:
>
> - Go to http://stackoverflow.com/questions/ask
> - Put in at least two lines of text
> - Select the text
> - Click the 'code' button (curly brackets)
>
>
> Actual results:
>
> Lines are indented by four spaces and the string 'visible' is put in front
> of the result.
> Things get worse when you repeatedly click the 'code' button.
> Other buttons also behave incorrectly.
> This is also not a problem that happens on StackOverflow only - it happens
> with all installations of PageDown.
>
>
> Expected results:
>
> Lines should just be indented by four spaces.
> This works correctly in Safari 6.0.3, Chrome 25.0.1364.172 and Firefox
> 19.0.2.
Hi, the fix for the issue you reported is landed on mozilla-central.Can you please help us verify this issue is fixed for you in the latest nightly ? Thanks in advance for your help !
Comment 14•13 years ago
|
||
Comment on attachment 731363 [details] [diff] [review]
Update RegExpStatics on empty match in str_replace_regexp_remove().
low risk fix for a Fx 21 regression impacting websites which may be using pagedown editor.(known site impacted is stack overflow)
Attachment #731363 -
Flags: approval-mozilla-beta?
Attachment #731363 -
Flags: approval-mozilla-beta+
Attachment #731363 -
Flags: approval-mozilla-aurora?
Attachment #731363 -
Flags: approval-mozilla-aurora+
Comment 15•13 years ago
|
||
Updated•12 years ago
|
Keywords: testcase-wanted → testcase
You need to log in
before you can comment on or make changes to this bug.
Description
•