Bug 854124 - Update RegExpStatics on empty match in str_replace_regexp_remove(). r=dvander